# electricity_consumption_forecasting_mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  infer.py  pyproject.toml  train.py
.data/: test.csv.dvc  train.csv.dvc
.dvc/: config
conf/: config.yaml  model_registry.yaml
conf/model/: conv_gru.yaml  conv_lin.yaml  conv_res_like.yaml  gru.yaml  lstm.yaml
elforecast/data/: __init__.py  datamodule.py  dataset.py  tools.py
elforecast/models/: __init__.py  conv_gru.py  conv_lin.py  conv_lstm.py  conv_lstm_lightning.py  conv_res_like.py  gru.py  lstm.py  selector.py
