[tool.poetry]
name = "electricity-consumption-forecasting-mlops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "electricity_consumption_forecasting_mlops"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.11.*"
torchvision = "*"
pandas = "2.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
