[tool.poetry]
name = "electricity-consumption-forecasting-mlops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "electricity_consumption_forecasting_mlops"}]

[tool.poetry.dependencies]
pandas = "2.*"
python = "^3.10"
torch = "1.11.*"
torchvision = "*"
numpy = "^1.26.4"
tqdm = "^4.66.2"
torchmetrics = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
